--- a/angular.json
+++ b/angular.json
@@ -28,7 +28,7 @@
             "assets": [
               "projects/topomojo-work/src/favicon.ico",
               "projects/topomojo-work/src/assets",
-              { "glob": "**/*", "input": "node_modules/monaco-editor", "output": "assets/monaco-editor" }
+              { "glob": "min/**/*", "input": "node_modules/monaco-editor", "output": "assets/monaco-editor" }
             ],
             "styles": [
               "projects/topomojo-work/src/styles.scss"
