--- a/tools/nginx-static.conf
+++ b/tools/nginx-static.conf
@@ -16,6 +16,6 @@ server {
   location / {
     add_header Cache-Control no-cache;
     expires off;
-    try_files $uri /index.html =404;
+    try_files $uri $uri/index.html /index.html =404;
   }
 }
