--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
         id: docker_meta
         uses: crazy-max/ghaction-docker-meta@v1
         with:
-          images: cmusei/topomojo-work
+          images: cmusei/topomojo-ui
 
       - name: fetch wmks
         run: curl https://box.cmusei.dev/wmks-jam-v1.tar -s -o wmks.tar
