--- a/angular.json
+++ b/angular.json
@@ -34,7 +34,7 @@
               "projects/topomojo-work/src/styles.scss"
             ],
             "scripts": [
-              "node_modules/marked/lib/marked.js",
+              "node_modules/marked/marked.min.js",
               "node_modules/emoji-toolkit/lib/js/joypixels.min.js"
             ]
           },
