--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@microsoft/signalr": "^5.0.8",
     "bootstrap": "^4.6.0",
+    "emoji-toolkit": "^7.0.0",
     "jquery": "^3.6.0",
     "jquery-ui-dist": "^1.12.1",
+    "marked": "^4.2.3",
     "monaco-editor": "^0.24.0",
     "ngx-bootstrap": "^7.0.0",
     "ngx-markdown": "^12.0.1",
@@ -43,6 +45,7 @@
     "@angular/cli": "^12.1.3",
     "@angular/compiler-cli": "~12.1.3",
     "@types/jasmine": "~3.7.4",
+    "@types/marked": "^4.0.7",
     "@types/node": "^14.14.45",
     "codelyzer": "^6.0.2",
     "jasmine-core": "~3.7.1",
