--- a/angular.json
+++ b/angular.json
@@ -28,7 +28,7 @@
             "assets": [
               "projects/topomojo-work/src/favicon.ico",
               "projects/topomojo-work/src/assets",
-              { "glob": "min/**/*", "input": "node_modules/monaco-editor", "output": "assets/monaco-editor" }
+              { "glob": "min/**/*", "input": "node_modules/monaco-editor", "output": "assets/monaco" }
             ],
             "styles": [
               "projects/topomojo-work/src/styles.scss"
@@ -45,7 +45,7 @@
                 {
                   "type": "initial",
                   "maximumWarning": "500kb",
-                  "maximumError": "4mb"
+                  "maximumError": "5mb"
                 },
                 {
                   "type": "anyComponentStyle",
@@ -106,19 +106,6 @@
               "projects/topomojo-work/src/styles.scss"
             ],
             "scripts": []
-          }
-        },
-        "lint": {
-          "builder": "@angular-devkit/build-angular:tslint",
-          "options": {
-            "tsConfig": [
-              "projects/topomojo-work/tsconfig.app.json",
-              "projects/topomojo-work/tsconfig.spec.json",
-              "projects/topomojo-work/e2e/tsconfig.json"
-            ],
-            "exclude": [
-              "**/node_modules/**"
-            ]
           }
         },
         "e2e": {
@@ -347,6 +334,5 @@
         }
       }
     }
-  },
-  "defaultProject": "topomojo-work"
+  }
 }
