--- a/package.json
+++ b/package.json
@@ -11,53 +11,53 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~12.1.3",
-    "@angular/common": "~12.1.3",
-    "@angular/compiler": "~12.1.3",
-    "@angular/core": "~12.1.3",
-    "@angular/forms": "~12.1.3",
-    "@angular/platform-browser": "~12.1.3",
-    "@angular/platform-browser-dynamic": "~12.1.3",
-    "@angular/router": "~12.1.3",
-    "@fortawesome/angular-fontawesome": "^0.9.0",
-    "@fortawesome/fontawesome-svg-core": "^1.2.35",
-    "@fortawesome/free-brands-svg-icons": "^5.15.3",
-    "@fortawesome/free-regular-svg-icons": "^5.15.3",
-    "@fortawesome/free-solid-svg-icons": "^5.15.3",
-    "@microsoft/signalr": "^5.0.8",
-    "bootstrap": "^4.6.0",
+    "@angular/animations": "^15.1.1",
+    "@angular/common": "^15.1.1",
+    "@angular/compiler": "^15.1.1",
+    "@angular/core": "^15.1.1",
+    "@angular/forms": "^15.1.1",
+    "@angular/platform-browser": "^15.1.1",
+    "@angular/platform-browser-dynamic": "^15.1.1",
+    "@angular/router": "^15.1.1",
+    "@fortawesome/angular-fontawesome": "^0.12.1",
+    "@fortawesome/fontawesome-svg-core": "^6.2.1",
+    "@fortawesome/free-brands-svg-icons": "^6.2.1",
+    "@fortawesome/free-regular-svg-icons": "^6.2.1",
+    "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "@microsoft/signalr": "^7.0.2",
+    "bootstrap": "^4.6.2",
     "emoji-toolkit": "^7.0.0",
-    "jquery": "^3.6.0",
-    "jquery-ui-dist": "^1.12.1",
-    "marked": "^4.2.3",
-    "monaco-editor": "^0.24.0",
-    "ngx-bootstrap": "^7.0.0",
-    "ngx-markdown": "^12.0.1",
-    "ngx-monaco-editor": "^12.0.0",
+    "jquery": "^3.6.3",
+    "jquery-ui-dist": "^1.13.2",
+    "marked": "^4.2.12",
+    "monaco-editor": "^0.34.1",
+    "ngx-bootstrap": "^10.2.0",
+    "ngx-markdown": "^15.1.0",
+    "ngx-monaco-editor-v2": "^15.0.1",
     "oidc-client": "^1.11.5",
-    "rxjs": "~6.6.0",
-    "tslib": "^2.0.0",
+    "rxjs": "~6.6.7",
+    "tslib": "^2.4.1",
     "vmware-wmks": "^1.0.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.12.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.1.3",
-    "@angular/cli": "^12.1.3",
-    "@angular/compiler-cli": "~12.1.3",
-    "@types/jasmine": "~3.7.4",
-    "@types/marked": "^4.0.7",
-    "@types/node": "^14.14.45",
+    "@angular-devkit/build-angular": "^15.1.2",
+    "@angular/cli": "^15.1.2",
+    "@angular/compiler-cli": "^15.1.1",
+    "@types/jasmine": "~3.7.8",
+    "@types/marked": "^4.0.8",
+    "@types/node": "^14.18.36",
+    "ajv": "^8.12.0",
     "codelyzer": "^6.0.2",
     "jasmine-core": "~3.7.1",
     "jasmine-spec-reporter": "~7.0.0",
-    "karma": "~6.3.4",
-    "karma-chrome-launcher": "~3.1.0",
+    "karma": "~6.3.20",
+    "karma-chrome-launcher": "~3.1.1",
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.1",
     "karma-jasmine-html-reporter": "^1.6.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
-    "typescript": "~4.2.4"
+    "typescript": "~4.9.4"
   }
 }
