--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@angular/platform-browser": "~13.3.12",
     "@angular/platform-browser-dynamic": "~13.3.12",
     "@angular/router": "~13.3.12",
-    "@fortawesome/angular-fontawesome": "^0.9.0",
+    "@fortawesome/angular-fontawesome": "^0.11.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-brands-svg-icons": "^5.15.3",
     "@fortawesome/free-regular-svg-icons": "^5.15.3",
@@ -31,9 +31,9 @@
     "jquery-ui-dist": "^1.12.1",
     "marked": "^4.2.3",
     "monaco-editor": "^0.24.0",
-    "ngx-bootstrap": "^7.0.0",
-    "ngx-markdown": "^12.0.1",
-    "ngx-monaco-editor": "^12.0.0",
+    "ngx-bootstrap": "^9.0.0",
+    "ngx-markdown": "^14.0.0",
+    "ngx-monaco-editor-v2": "^14.0.0",
     "oidc-client": "^1.11.5",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
