--- a/angular.json
+++ b/angular.json
@@ -28,7 +28,7 @@
             "assets": [
               "projects/topomojo-work/src/favicon.ico",
               "projects/topomojo-work/src/assets",
-              { "glob": "min/**/*", "input": "node_modules/monaco-editor", "output": "assets/monaco-editor" }
+              { "glob": "min/**/*", "input": "node_modules/monaco-editor", "output": "assets/monaco" }
             ],
             "styles": [
               "projects/topomojo-work/src/styles.scss"
@@ -45,7 +45,7 @@
                 {
                   "type": "initial",
                   "maximumWarning": "500kb",
-                  "maximumError": "4mb"
+                  "maximumError": "5mb"
                 },
                 {
                   "type": "anyComponentStyle",
