--- a/angular.json
+++ b/angular.json
@@ -8,9 +8,6 @@
       "schematics": {
         "@schematics/angular:component": {
           "style": "scss"
-        },
-        "@schematics/angular:application": {
-          "strict": true
         }
       },
       "root": "projects/topomojo-work",
@@ -23,8 +20,11 @@
             "outputPath": "dist/topomojo-work",
             "index": "projects/topomojo-work/src/index.html",
             "main": "projects/topomojo-work/src/main.ts",
-            "polyfills": "projects/topomojo-work/src/polyfills.ts",
+            "polyfills": [
+              "zone.js"
+            ],
             "tsConfig": "projects/topomojo-work/tsconfig.app.json",
+            "inlineStyleLanguage": "scss",
             "assets": [
               "projects/topomojo-work/src/favicon.ico",
               "projects/topomojo-work/src/assets",
@@ -79,8 +79,7 @@
               "browserTarget": "topomojo-work:build:production"
             },
             "development": {
-              "browserTarget": "topomojo-work:build:development",
-              "port": 4200
+              "browserTarget": "topomojo-work:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -95,9 +94,12 @@
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
             "main": "projects/topomojo-work/src/test.ts",
-            "polyfills": "projects/topomojo-work/src/polyfills.ts",
+            "polyfills": [
+              "zone.js",
+              "zone.js/testing"
+            ],
             "tsConfig": "projects/topomojo-work/tsconfig.spec.json",
-            "karmaConfig": "projects/topomojo-work/karma.conf.js",
+            "inlineStyleLanguage": "scss",
             "assets": [
               "projects/topomojo-work/src/favicon.ico",
               "projects/topomojo-work/src/assets"
@@ -106,18 +108,6 @@
               "projects/topomojo-work/src/styles.scss"
             ],
             "scripts": []
-          }
-        },
-        "e2e": {
-          "builder": "@angular-devkit/build-angular:protractor",
-          "options": {
-            "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "topomojo-work:serve"
-          },
-          "configurations": {
-            "production": {
-              "devServerTarget": "topomojo-work:serve:production"
-            }
           }
         }
       }
@@ -142,7 +132,9 @@
             "outputPath": "dist/topomojo-mks",
             "index": "projects/topomojo-mks/src/index.html",
             "main": "projects/topomojo-mks/src/main.ts",
-            "polyfills": "projects/topomojo-mks/src/polyfills.ts",
+            "polyfills": [
+              "zone.js"
+            ],
             "tsConfig": "projects/topomojo-mks/tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": [
@@ -215,9 +207,11 @@
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
             "main": "projects/topomojo-mks/src/test.ts",
-            "polyfills": "projects/topomojo-mks/src/polyfills.ts",
+            "polyfills": [
+              "zone.js",
+              "zone.js/testing"
+            ],
             "tsConfig": "projects/topomojo-mks/tsconfig.spec.json",
-            "karmaConfig": "projects/topomojo-mks/karma.conf.js",
             "inlineStyleLanguage": "scss",
             "assets": [
               "projects/topomojo-mks/src/favicon.ico",
@@ -251,7 +245,9 @@
             "outputPath": "dist/topomojo-launchpoint",
             "index": "projects/topomojo-launchpoint/src/index.html",
             "main": "projects/topomojo-launchpoint/src/main.ts",
-            "polyfills": "projects/topomojo-launchpoint/src/polyfills.ts",
+            "polyfills": [
+              "zone.js"
+            ],
             "tsConfig": "projects/topomojo-launchpoint/tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": [
@@ -318,9 +314,11 @@
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
             "main": "projects/topomojo-launchpoint/src/test.ts",
-            "polyfills": "projects/topomojo-launchpoint/src/polyfills.ts",
+            "polyfills": [
+              "zone.js",
+              "zone.js/testing"
+            ],
             "tsConfig": "projects/topomojo-launchpoint/tsconfig.spec.json",
-            "karmaConfig": "projects/topomojo-launchpoint/karma.conf.js",
             "inlineStyleLanguage": "scss",
             "assets": [
               "projects/topomojo-launchpoint/src/favicon.ico",
