--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^15.1.1",
-    "@angular/common": "^15.1.1",
-    "@angular/compiler": "^15.1.1",
-    "@angular/core": "^15.1.1",
-    "@angular/forms": "^15.1.1",
-    "@angular/platform-browser": "^15.1.1",
-    "@angular/platform-browser-dynamic": "^15.1.1",
-    "@angular/router": "^15.1.1",
+    "@angular/animations": "^15.2.2",
+    "@angular/common": "^15.2.2",
+    "@angular/compiler": "^15.2.2",
+    "@angular/core": "^15.2.2",
+    "@angular/forms": "^15.2.2",
+    "@angular/platform-browser": "^15.2.2",
+    "@angular/platform-browser-dynamic": "^15.2.2",
+    "@angular/router": "^15.2.2",
     "@fortawesome/angular-fontawesome": "^0.12.1",
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
     "@fortawesome/free-brands-svg-icons": "^6.2.1",
@@ -35,29 +35,23 @@
     "ngx-markdown": "^15.1.0",
     "ngx-monaco-editor-v2": "^15.0.1",
     "oidc-client-ts": "^2.2.1",
-    "rxjs": "~6.6.7",
+    "rxjs": "~7.8.0",
     "tslib": "^2.4.1",
     "vmware-wmks": "^1.0.0",
     "zone.js": "~0.12.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^15.1.2",
-    "@angular/cli": "^15.1.2",
-    "@angular/compiler-cli": "^15.1.1",
-    "@types/jasmine": "~3.7.8",
+    "@angular-devkit/build-angular": "^15.2.2",
+    "@angular/cli": "~15.2.2",
+    "@angular/compiler-cli": "^15.2.0",
+    "@types/jasmine": "~4.3.0",
     "@types/marked": "^4.0.8",
-    "@types/node": "^14.18.36",
-    "ajv": "^8.12.0",
-    "codelyzer": "^6.0.2",
-    "jasmine-core": "~3.7.1",
-    "jasmine-spec-reporter": "~7.0.0",
-    "karma": "~6.3.20",
-    "karma-chrome-launcher": "~3.1.1",
-    "karma-coverage": "~2.0.3",
-    "karma-jasmine": "~4.0.1",
-    "karma-jasmine-html-reporter": "^1.6.0",
-    "protractor": "~7.0.0",
-    "ts-node": "~8.3.0",
+    "jasmine-core": "~4.5.0",
+    "karma": "~6.4.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage": "~2.2.0",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "~2.0.0",
     "typescript": "~4.9.4"
   }
 }
