--- a/tools/nginx-static.conf
+++ b/tools/nginx-static.conf
@@ -8,13 +8,13 @@ server {
   gzip_types text/css application/javascript;
   gzip_min_length 1000;
   gzip_proxied no-cache no-store private expired auth;
-  add_header Content-Security-Policy "default-src 'self'; frame-ancestors: 'none'";
-
+  
   location ~ \.(js|css|png|jpg|jpeg|gif|ico|woff2)$ {
     expires max;
   }
 
   location / {
+    add_header 'Content-Security-Policy' "default-src 'self' 'unsafe-inline'; frame-ancestors 'none'";
     add_header Cache-Control no-cache;
     expires off;
     try_files $uri $uri/index.html /index.html =404;
