UI help for scoring while testing gameplay

--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
+    "start-topo": "npx ng serve topomojo-work --host 0.0.0.0 --disable-host-check --serve-path /topo/",
+    "start-mks": "npx ng serve topomojo-mks --host 0.0.0.0 --port 4201 --disable-host-check --serve-path /mks/",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
