--- a/angular.json
+++ b/angular.json
@@ -31,6 +31,11 @@
                 "glob": "min/**/*",
                 "input": "node_modules/monaco-editor",
                 "output": "assets/monaco"
+              },
+              {
+                "glob": "**/*",
+                "input": "node_modules/@cmusei/console-forge/assets",
+                "output": "assets"
               }
             ],
             "styles": ["projects/topomojo-work/src/styles.scss"],
@@ -89,7 +94,8 @@
               "buildTarget": "topomojo-work:build:production"
             },
             "development": {
-              "buildTarget": "topomojo-work:build:development"
+              "buildTarget": "topomojo-work:build:development",
+              "port": 4201
             }
           },
           "defaultConfiguration": "development"
