--- a/projects/topomojo-work/src/assets/example-settings.json
+++ b/projects/topomojo-work/src/assets/example-settings.json
@@ -1,6 +1,8 @@
 {
   "appname": "TopoMojo",
   "apphost": "",
+  "docsUrl": "https://cmu-sei.github.io/crucible/topomojo",
+  "disableExternalLinks": true,
   "oidc": {
     "authority": "https://devid.cmusei.dev",
     "client_id": "client-with-code-grant",
