--- a/projects/topomojo-work/tsconfig.app.json
+++ b/projects/topomojo-work/tsconfig.app.json
@@ -3,6 +3,8 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "outDir": "../../out-tsc/app",
+    "resolveJsonModule": true,
+    "esModuleInterop": true,
     "types": []
   },
   "files": [
