--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "topomojo-work",
-  "version": "2.5.3-rc1",
+  "version": "2.5.4",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
