--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,84 +8,25 @@ permissions:
   contents: write
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
+  build-and-publish:
+    name: Build & Publish
+    uses: cmu-sei/Crucible-Github-Actions/.github/workflows/docker-build.yaml@docker-v1.0
+    with:
+      imageName: cmusei/topomojo-ui
+      tagName: ${{ github.event.release.tag_name }}
 
-      - name: Derive version from release tag
-        run: |
-          TAG='${{ github.event.release.tag_name }}'
-          VERSION="${TAG#v}"   # strips leading v if present
-          echo "TAG=$TAG" >> $GITHUB_ENV
-          echo "VERSION=$VERSION" >> $GITHUB_ENV
+      versionMode: npm
+      versionFiles: |
+        package.json
 
-      - name: Update package.json version to match tag
-        run: |
-          node -e "
-            const fs = require('fs');
-            const path = 'package.json';
-            const pkg = JSON.parse(fs.readFileSync(path, 'utf8'));
-            pkg.version = process.env.VERSION;
-            fs.writeFileSync(path, JSON.stringify(pkg, null, 2) + '\n');
-          "
-          git diff -- package.json
+      buildArgs: |
+        commit=${{ github.sha }}
 
-      - name: Commit version bump
-        run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
+      enableQemu: true
+      preBuildCommands: |
+        curl https://box.cmusei.dev/wmks-jam-v1.tar -s -o wmks.tar
+        test -s wmks.tar
 
-          if git diff --quiet; then
-            echo "No version change needed."
-            exit 0
-          fi
-
-          git add package.json
-          git commit -m "chore: set version to $VERSION"
-
-      - name: Force-move tag to include version bump commit
-        run: |
-          git tag -f "$TAG"
-          git push origin -f "refs/tags/$TAG"
-
-      - name: Re-checkout moved tag (so build uses updated package.json)
-        run: |
-          git fetch --tags --force
-          git checkout -f "tags/$TAG"
-          git rev-parse HEAD
-
-      - name: Docker meta
-        id: docker_meta
-        uses: crazy-max/ghaction-docker-meta@v1
-        with:
-          images: cmusei/topomojo-ui
-
-      - name: fetch wmks
-        run: curl https://box.cmusei.dev/wmks-jam-v1.tar -s -o wmks.tar
-
-      - name: Login to DockerHub
-        if: github.event_name != 'pull_request'
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_PASSWORD }}
-
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-
-      - name: Build and push
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          file: ./Dockerfile
-          push: ${{ startsWith(github.ref, 'refs/tags/') }}
-          tags: ${{ steps.docker_meta.outputs.tags }}
-          build-args: commit=${{ github.sha }}
-          labels: ${{ steps.docker_meta.outputs.labels }}
+    secrets:
+      DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+      DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
