Remove trailing newline from versionFiles

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
       tagName: ${{ github.event.release.tag_name }}
 
       versionMode: npm
-      versionFiles: |
+      versionFiles: |-
         package.json
 
       buildArgs: |
