--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,43 +2,31 @@ name: CI
 
 on:
   release:
-    types: [ "published" ]
+    types: ["published"]
+
+permissions:
+  contents: write
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
+  build-and-publish:
+    name: Build & Publish
+    uses: cmu-sei/Crucible-Github-Actions/.github/workflows/docker-build.yaml@docker-v1.1
+    with:
+      imageName: cmusei/topomojo-ui
+      tagName: ${{ github.event.release.tag_name }}
 
-      - name: Docker meta
-        id: docker_meta
-        uses: crazy-max/ghaction-docker-meta@v1
-        with:
-          images: cmusei/topomojo-ui
+      versionMode: npm
+      versionFiles: |-
+        package.json
 
-      - name: fetch wmks
-        run: curl https://box.cmusei.dev/wmks-jam-v1.tar -s -o wmks.tar
+      buildArgs: |
+        commit=${{ github.sha }}
 
-      - name: Login to DockerHub
-        if: github.event_name != 'pull_request'
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+      enableQemu: true
+      preBuildCommands: |
+        curl https://box.cmusei.dev/wmks-jam-v1.tar -s -o wmks.tar
+        test -s wmks.tar
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-
-      - name: Build and push
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          file: ./Dockerfile
-          push: ${{ startsWith(github.ref, 'refs/tags/') }}
-          tags: ${{ steps.docker_meta.outputs.tags }}
-          build-args: commit=${{ github.sha }}
-          labels: ${{ steps.docker_meta.outputs.labels }}
+    secrets:
+      DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+      DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
